<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            style="@style/Heading"
            android:id="@+id/yo_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yoga_oasis"
            android:gravity="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/yoimage" />

        <TextView
            style="@style/SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"/>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"/>

        <TextView
            style="@style/SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_started"/>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_started_text"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiver_text"
            android:layout_marginBottom="8dp"/>

        <Button
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_waiver"
            android:layout_marginTop="4dp"
            android:onClick="EmailWaiver" />

        <TextView
            style="@style/SubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"/>

        <View
            style="@style/Line"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginBottom="24dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/yoimage1" />

    </LinearLayout>
</ScrollView>